samples/_failures_safe/1761482362_588e16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20d8bdad.c: In function ‘print_errors’:
./samples/SAFE/__tmp_20d8bdad.c:144:13: error: expected declaration or statement at end of input
  144 |             char time_buf[32];
      |             ^~~~
./samples/SAFE/__tmp_20d8bdad.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20d8bdad.c:144:13: error: expected declaration or statement at end of input
